# cinder-monorepo

./: .gitignore  README.md
api/: Makefile  fsw.yml  go.mod  go.sum  http-client.env.json  main.go
cinder-backend/: pyproject.toml
cinder-backend/apps/account/: apps.py  authenticate.py  models.py  urls.py  views.py
cinder-backend/apps/account/migrations/: 0001_initial.py
cinder-backend/core/: settings.py  urls.py
cinder-web-frontend/: index.html  package-lock.json  package.json
cinder-web-frontend/src/: App.jsx  main.jsx
cinder-web-frontend/src/components/: Navbar.jsx  PersistLogin.jsx
cinder-web-frontend/src/hooks/: useAuth.js  useAxiosPrivate.js  useLogout.js
cinder-web-frontend/src/views/: TimeLine.jsx
cinder-web-ui/: index.html  package-lock.json  package.json  tailwind.config.js
cinder-web-ui/src/: App.tsx  layout.tsx  main.tsx
cinder-web-ui/src/axios/: index.ts
cinder-web-ui/src/components/: PersistLogin.tsx
cinder-web-ui/src/hooks/: useAuth.tsx  useAxiosPrivate.tsx  useLogout.tsx  useRefreshToken.tsx  useUser.tsx
cinder-web-ui/src/middleware/: Auth.tsx
cinder-web-ui/src/pages/: 404.tsx  About.tsx  Home.tsx  SignIn.tsx
cinder-web-ui/src/store/: store-context.tsx
nextjs-firebase/: package-lock.json  package.json
nextjs-firebase/app/: firebase.js  layout.js
nextjs-firebase/app/about/: page.jsx
nextjs-firebase/app/components/: top-navbar.jsx
react-firebase/: package-lock.json  package.json
react-firebase/pages/: profile.jsx  sign-in.jsx  sign-up.jsx
react-firebase/src/: App.jsx
windmill-firebase-auth/: package-lock.json
(+9 files in other folders)
